added: account details endpoint
