# docs/swagger.yaml
@@ -89,6 +89,39 @@ paths:
       summary: Creates an account
       tags:
       - accounts
+  /accounts/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get account by id
+      parameters:
+      - description: The id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/queries.Account'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/controllers.BaseError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/controllers.BaseError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controllers.BaseError'
+      summary: Get account by id
+      tags:
+      - accounts
   /transactions:
     post:
       consumes:
